[package]
name = "compositor"
version = "0.1.0"
authors = ["Gurtej Kanwar <gurtejkanwar@gmail.com>"]
edition = "2018"

[dependencies]
pixels = "0.3"
winit = "0.24"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[lib]
name = "libcompositor"
path = "src/lib.rs"

[[bin]]
name = "compositor_emulator"
path = "src/bin.rs"
